--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "3.0.0",
     "@types/express": "5.0.1",
     "@types/node": "22.15.18",
     "prisma": "6.8.2",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.8.2",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
     "express": "5.1.0",
     "zod": "3.24.4"
