--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 NODE_ENV = dev
 PORT = 3333
 
-DATABASE_URL="postgresql://docker:docker@localhost:5432/telescash?schema=public"
+#Auth
+JWT_SECRET = telescash
+
+
+# Database
+DATABASE_URL = "postgresql://docker:docker@localhost:5432/telescash?schema=public"
