--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
     "express": "5.1.0",
+    "express-jwt": "8.5.1",
+    "jsonwebtoken": "9.0.2",
     "zod": "3.24.4"
   }
 }
